# react-jobads-extractions

./: .gitattributes  pyproject.toml
notebooks/: ReAct.ipynb  ads.ipynb  semantical_eval.ipynb
notebooks/data/: ads-50k.json  ads_preprocessed.csv  occupations_en.csv  sample_results.csv
notebooks/softskills/: softskills.html  softskills.jsonl
notebooks/utils/: __init__.py  print_utils.py
src/agent/: __init__.py  evaluation.py  prompts.py  req_and_res.py  skill_utils.py  state.py  todo_utils.py
src/agent/studio/: langgraph.json  react.py  requirements.txt
src/data/: hard_skills.json  soft_skills.json
